operations/nginx/dev/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: DOMAIN_URL
      http:
        paths:
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3000
          - path: /api/rentit/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rentit-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
